--- a/basic-application/style.css
+++ b/basic-application/style.css
@@ -51,7 +51,7 @@ button {
   font-size: 43px;
   background-color: darksalmon;
   color: white;
-  border: 4px solid black;
+  border: 4px, solid, black;
   border-radius: 50%;
   margin-top: 15px;
 }
