--- a/basic-application/style.css
+++ b/basic-application/style.css
@@ -1,5 +1,6 @@
 body {
   text-align: center;
+  background-color: black;
 }
 
 button {
@@ -62,7 +63,6 @@ button {
 
 .game__field {
   position: relative;
-  background-color: lightseagreen;
   width: 100%;
   height: 100%;
   margin-top: 70px;
