--- a/basic-application/style.css
+++ b/basic-application/style.css
@@ -26,13 +26,17 @@ button {
   align-items: center;
 }
 
-.game__start {
+.game__button {
   background-color: wheat;
   width: 60px;
   height: 60px;
   border: 4px solid black;
   font-size: 24px;
   transition: transform 300ms ease-in;
+}
+
+.game__button:hover {
+  transform: scale(1.1);
 }
 
 .game__timer {
@@ -55,10 +59,6 @@ button {
   border: 4px, solid, black;
   border-radius: 50%;
   margin-top: 15px;
-}
-
-.game__start:hover {
-  transform: scale(1.1);
 }
 
 .game__field {
