--- a/basic-application/style.css
+++ b/basic-application/style.css
@@ -47,6 +47,7 @@ button {
   border: 4px solid black;
   border-radius: 10px;
   margin-top: 15px;
+  visibility: hidden;
 }
 
 .game__score {
@@ -59,6 +60,7 @@ button {
   border: 4px, solid, black;
   border-radius: 50%;
   margin-top: 15px;
+  visibility: hidden;
 }
 
 .game__field {
