--- a/basic-application/style.css
+++ b/basic-application/style.css
@@ -33,6 +33,7 @@ button {
   border: 4px solid black;
   font-size: 24px;
   transition: transform 300ms ease-in;
+  visibility: visible;
 }
 
 .game__button:hover {
