--- a/basic-application/style.css
+++ b/basic-application/style.css
@@ -88,7 +88,21 @@ button {
   display: none;
 }
 
+.button__row {
+  display: flex;
+  justify-content: space-evenly;
+}
+
 .pop-up__refresh {
+  width: 60px;
+  height: 60px;
+  background-color: wheat;
+  font-size: 30px;
+  border: 2px solid black;
+  border-radius: 50%;
+}
+
+.pop-up__exit {
   width: 60px;
   height: 60px;
   background-color: wheat;
@@ -100,4 +114,5 @@ button {
 .pop-up__message {
   font-size: 24px;
   display: block;
+  margin: 15px;
 }
