--- a/brainstorming/start-stop/style.css
+++ b/brainstorming/start-stop/style.css
@@ -2,7 +2,8 @@
   position: absolute;
   background-color: white;
   color: black;
-  right: 100px;
+  right: 200px;
+  font-size: 35px;
 }
 
 #stopped {
@@ -10,6 +11,7 @@
   background-color: white;
   color: black;
   right: 20px;
+  font-size: 35px;
 }
 
 body {
